# KernelPatch

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
.github/workflows/: build.yml  build_dev.yml
doc/en/: build.md  guide.md
kernel/: CMakeLists.txt  Makefile  kpimg.lds
kernel/base/: hmem.c  hook.c  map.c  setjmp.S  setup.c  setup1.S  start.c  start.h
kernel/include/: kp_atomic.h  kp_spinlock.h  kpmalloc.h  kpmodule.h  preset.h  setjmp.h
kernel/patch/: patch.c
kernel/patch/android/: userd.c
kernel/patch/common/: kplz4.c  kpstore.c  kpstore_dump.c  supercall.c
kernel/patch/include/: kconfig.h  kplz4.h  kpstore.h  kpstore_persist.h  module.h
kernel/patch/include/uapi/: scdefs.h
kernel/patch/module/: kconfig.c  module.c
kpms/: CMakeLists.txt
kpms/demo-kconfig/: Makefile  kconfig.c
kpms/kpm-sampolicy/: Makefile  sampolicy.c
ktool/: CMakeLists.txt
ktool/src/: arm64_insn.hpp  ikconfig.cpp  ikconfig.hpp  image.cpp  image.hpp  kallsyms.cpp  kallsyms.hpp  main.cpp  patch.cpp  patch.hpp  preset.h  preset_utils.hpp
tools/: CMakeLists.txt  kallsym.c  kallsym.h  main.cpp  patch.c
tools/arm64/: insn.cpp  insn.hpp
tools/core/: buffer.hpp  file.hpp  logging.hpp  types.hpp
tools/crypto/: sha256.cpp  sha256.hpp
tools/disasm/: arm64_asm.c  arm64_disasm.c
tools/disasm/include/disasm/: arm64_asm.h  arm64_disasm.h  compat.h
tools/kernel/: image.cpp  image.hpp  kallsym.cpp  kallsym.hpp  patch.cpp  patch.hpp  preset.hpp
tools/kpm/: module.cpp  module.hpp
tools/src/: arm64_insn.hpp  arm64_wrap.hpp  ikconfig.cpp  ikconfig.hpp  image.cpp  image.hpp  kallsyms.cpp  kallsyms.hpp  main.cpp  patch.cpp  patch.hpp  preset_utils.hpp
user/: supercall.h
